okd/okd-configuration/components/gateway/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    gateway.istio.io/managed: openshift.io-gateway-controller-v1
    gateway.networking.k8s.io/gateway-name: https-gateway
  annotations:
    kube-vip.io/egress: "true"
    kube-vip.io/egress-internal: "true"
    kube-vip.io/loadbalancerIPs: "10.101.10.9"
  name: https-gateway-openshift-default
  namespace: openshift-ingress
spec:
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
    - appProtocol: tcp
      name: status-port
      port: 15021
    - appProtocol: https
      name: https
      port: 443
  selector:
    gateway.networking.k8s.io/gateway-name: https-gateway
  type: LoadBalancer
  loadBalancerClass: kube-vip.io/kube-vip-class
